--- a/tpl/page.jade
+++ b/tpl/page.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title="Real time web chat"
+    script(src='/chat.js')
+    script(src='/socket.io/socket.io.js')
   body
     #content(style='width: 500px; height: 300px; margin: 0 0 20px; border: solid 1px #999; overflow-y: scroll;')
     .controls
