--- a/tpl/page.jade
+++ b/tpl/page.jade
@@ -7,5 +7,8 @@ html
   body
     #content(style='width: 500px; height: 300px; margin: 0 0 20px; border: solid 1px #999; overflow-y: scroll;')
     .controls
+      | Name:
+      input#name(style='width:350px;')
+      br
       input#field(style='width:350px;')
       input#send(type='button', value='send')
